2006-09-02  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/Makefile.am:
    * libseahorse/seahorse-key-store.c (removed):
    * libseahorse/seahorse-key-store.c (removed):
    * src/seahorse-key-manager-store.c:
    * src/seahorse-key-manager-store.h:
    * src/seahorse-key-manager.c:
    * src/seahorse-keyserver-results.c: Merged SeahorseKeyStore into
    SeahorseKeyManagerStore
    
2006-09-01  Abel Cheung  <abel@oaka.org>

	* configure.in: Added 'mk' to ALL_LINGUAS.

2006-09-01  Nate Nielsen  <nielsen@memberwebs.com>

    * libcryptui/Makefile.am: Make libcrypui properly link 
    to its dependencies.
    
2006-09-01  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/seahorse-service.c:
    * libseahorse/seahorse-key-source.c:
    * libseahorse/seahorse-key-store.c:
    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-operation.h:
    * libseahorse/seahorse-ssh-source.c:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h:
    * src/seahorse-key-dialogs.h:
    * src/seahorse-key-manager-store.c:
    * src/seahorse-key-manager.c:
    * src/seahorse-keyserver-results.c: Assorted fixes from the 
    seahorse-x509 branch.
    
2006-09-01  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/Makefile.am:
    * plugins/applet/Makefile.am:
    * plugins/nautilus/Makefile.am:
    * src/Makefile.am: Fix build order problems with libcryptui.
    Fixes #351935
    
2006-08-31  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager.c:
    * src/seahorse-sign.c: Don't sync with server unless signing 
    actually took place

2006-08-31  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-operation.c: Operation reference fixes
    
2006-08-30  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/seahorse-sharing.c:
    * libseahorse/seahorse-dns-sd.c: use pgpkey-hkp for DNS SD 
    SRV record. Patch from nafallo@magicalforest.se. Fixes #353595
    