@@ -1,4 +1,14 @@
 2006-09-02  Nate Nielsen  <nielsen@memberwebs.com>
+    
+    * libseahorse/seahorse-key.c:
+    * libseahorse/seahorse-key.h:
+    * libseahorse/seahorse-pgp-key.c:
+    * src/seahorse-key-manager-store.c: Remove punctuation from the main 
+    display and pretty up the display of email addresses and comments.
+    Add a little padding between columns they don't run into each other.
+    Move expander to the Name column where it makes more sense.
+    
+2006-09-02  Nate Nielsen  <nielsen@memberwebs.com>
 
     * libseahorse/Makefile.am:
     * libseahorse/seahorse-key-store.c (removed):
